@@ -1,13 +1,13 @@
 package ru.mas.ktane_bot.handlers.solvers.vanilla;
 
 import lombok.RequiredArgsConstructor;
+import lombok.SneakyThrows;
 import org.springframework.stereotype.Component;
-import ru.mas.ktane_bot.bot.state.BotSubState;
 import ru.mas.ktane_bot.cache.DataCache;
 import ru.mas.ktane_bot.handlers.solvers.Solver;
 import ru.mas.ktane_bot.model.MessageDto;
 import ru.mas.ktane_bot.model.MessageType;
-import ru.mas.ktane_bot.model.modules.Memory;
+import ru.mas.ktane_bot.model.modules.vanilla.MemoryModule;
 
 import java.util.Arrays;
 
@@ -17,96 +17,100 @@ import static ru.mas.ktane_bot.model.CommonValues.*;
 @RequiredArgsConstructor
 public class MemorySolver implements Solver {
 
-    private Memory module = new Memory();
+    private MemoryModule module = new MemoryModule();
 
     private final DataCache dataCache;
-    
+
     private static final String PRESS = "Нажмите на ";
 
+    @SneakyThrows
     @Override
     public MessageDto solve(String message, String userId) {
-        var subState = dataCache.getUsersCurrentBotSubState(userId);
-        if (dataCache.getUserModule(userId) != null)
-            module = (Memory) dataCache.getUserModule(userId);
+        module = (MemoryModule) dataCache.getUserModule(userId);
         var splitted = Arrays.stream(message.split("")).toList();
-        switch (subState) {
-            case MEMORY1:
-                dataCache.setUsersCurrentBotSubState(userId, BotSubState.MEMORY2);
-                switch (splitted.get(0)) {
-                    case ONE, TWO:
-                        module = new Memory();
-                        setValueAndPosition(userId, splitted.get(2), "2");
-                        return MessageDto.builder().messageType(MessageType.TEXT).userId(userId).text(PRESS + splitted.get(2)).build();
-                    case THREE:
-                        module = new Memory();
-                        setValueAndPosition(userId, splitted.get(3), "3");
-                        return MessageDto.builder().messageType(MessageType.TEXT).userId(userId).text(PRESS + splitted.get(3)).build();
-                    case FOUR:
-                        module = new Memory();
-                        setValueAndPosition(userId, splitted.get(4), "4");
-                        return MessageDto.builder().messageType(MessageType.TEXT).userId(userId).text(PRESS + splitted.get(4)).build();
+        var result = switch (module.getPositions().size()) {
+            case 0 -> switch (splitted.get(0)) {
+                case ONE, TWO -> {
+                    setValueAndPosition(userId, splitted.get(2), TWO);
+                    yield PRESS + splitted.get(2);
                 }
-            case MEMORY2:
-                dataCache.setUsersCurrentBotSubState(userId, BotSubState.MEMORY3);
-                switch (splitted.get(0)) {
-                    case ONE:
-                        setValueAndPosition(userId, "4", String.valueOf(splitted.subList(1, 5).indexOf("4") + 1));
-                        return MessageDto.builder().messageType(MessageType.TEXT).userId(userId).text(PRESS + FOUR).build();
-                    case TWO, FOUR:
-                        setValueAndPosition(userId, splitted.get(Integer.parseInt(module.getPositions().getFirst())),
-                                module.getPositions().getFirst());
-                        return MessageDto.builder().messageType(MessageType.TEXT).userId(userId).text(PRESS + splitted.get(Integer.parseInt(module.getPositions().getFirst()))).build();
-                    case THREE:
-                        setValueAndPosition(userId, splitted.get(1), "1");
-                        return MessageDto.builder().messageType(MessageType.TEXT).userId(userId).text(PRESS + splitted.get(1)).build();
+                case THREE -> {
+                    setValueAndPosition(userId, splitted.get(3), THREE);
+                    yield PRESS + splitted.get(3);
                 }
-            case MEMORY3:
-                dataCache.setUsersCurrentBotSubState(userId, BotSubState.MEMORY4);
-                switch (splitted.get(0)) {
-                    case ONE:
-                        setValueAndPosition(userId, module.getValues().get(1),
-                                String.valueOf(splitted.subList(1, 5).indexOf(module.getValues().get(1))));
-                        return MessageDto.builder().messageType(MessageType.TEXT).userId(userId).text(PRESS + module.getValues().get(1)).build();
-                    case TWO:
-                        setValueAndPosition(userId, module.getValues().get(0),
-                                String.valueOf(splitted.subList(1, 5).indexOf(module.getValues().get(0))));
-                        return MessageDto.builder().messageType(MessageType.TEXT).userId(userId).text(PRESS + module.getValues().getFirst()).build();
-                    case THREE:
-                        setValueAndPosition(userId, splitted.get(3), "3");
-                        return MessageDto.builder().messageType(MessageType.TEXT).userId(userId).text(PRESS + splitted.get(3)).build();
-                    case FOUR:
-                        setValueAndPosition(userId, "4", String.valueOf(splitted.subList(1, 5).indexOf("4") + 1));
-                        return MessageDto.builder().messageType(MessageType.TEXT).userId(userId).text(PRESS + FOUR).build();
+                case FOUR -> {
+                    setValueAndPosition(userId, splitted.get(4), FOUR);
+                    yield PRESS + splitted.get(4);
                 }
-            case MEMORY4:
-                dataCache.setUsersCurrentBotSubState(userId, BotSubState.MEMORY5);
-                switch (splitted.get(0)) {
-                    case ONE:
-                        setValueAndPosition(userId, splitted.get(Integer.parseInt(module.getPositions().getFirst())),
-                                module.getPositions().getFirst());
-                        return MessageDto.builder().messageType(MessageType.TEXT).userId(userId).text(PRESS + splitted.get(Integer.parseInt(module.getPositions().getFirst()))).build();
-                    case TWO:
-                        setValueAndPosition(userId, splitted.get(1), "1");
-                        return MessageDto.builder().messageType(MessageType.TEXT).userId(userId).text(PRESS + splitted.get(1)).build();
-                    case THREE, FOUR:
-                        setValueAndPosition(userId, splitted.get(Integer.parseInt(module.getPositions().get(1))),
-                                module.getPositions().get(1));
-                        return MessageDto.builder().messageType(MessageType.TEXT).userId(userId).text(PRESS + splitted.get(Integer.parseInt(module.getPositions().get(1)))).build();
+                default -> throw new Exception(); // TODO validate
+            };
+            case 1 -> switch (splitted.get(0)) {
+                case ONE -> {
+                    setValueAndPosition(userId, FOUR, String.valueOf(splitted.subList(1, 5).indexOf(FOUR) + 1));
+                    yield PRESS + FOUR;
                 }
-            case MEMORY5:
+                case TWO, FOUR -> {
+                    setValueAndPosition(userId, splitted.get(Integer.parseInt(module.getPositions().getFirst())),
+                            module.getPositions().getFirst());
+                    yield PRESS + splitted.get(Integer.parseInt(module.getPositions().getFirst()));
+                }
+                case THREE -> {
+                    setValueAndPosition(userId, splitted.get(1), ONE);
+                    yield PRESS + splitted.get(1);
+                }
+                default -> throw new Exception();
+            };
+            case 2 -> switch (splitted.get(0)) {
+                case ONE -> {
+                    setValueAndPosition(userId, module.getValues().get(1),
+                            String.valueOf(splitted.subList(1, 5).indexOf(module.getValues().get(1))));
+                    yield PRESS + module.getValues().get(1);
+                }
+                case TWO -> {
+                    setValueAndPosition(userId, module.getValues().get(0),
+                            String.valueOf(splitted.subList(1, 5).indexOf(module.getValues().get(0))));
+                    yield PRESS + module.getValues().getFirst();
+                }
+                case THREE -> {
+                    setValueAndPosition(userId, splitted.get(3), THREE);
+                    yield PRESS + splitted.get(3);
+                }
+                case FOUR -> {
+                    setValueAndPosition(userId, FOUR, String.valueOf(splitted.subList(1, 5).indexOf(FOUR) + 1));
+                    yield PRESS + FOUR;
+                }
+                default -> throw new Exception();
+            };
+            case 3 -> switch (splitted.get(0)) {
+                case ONE -> {
+                    setValueAndPosition(userId, splitted.get(Integer.parseInt(module.getPositions().getFirst())),
+                            module.getPositions().getFirst());
+                    yield PRESS + splitted.get(Integer.parseInt(module.getPositions().getFirst()));
+                }
+                case TWO -> {
+                    setValueAndPosition(userId, splitted.get(1), ONE);
+                    yield PRESS + splitted.get(1);
+                }
+                case THREE, FOUR -> {
+                    setValueAndPosition(userId, splitted.get(Integer.parseInt(module.getPositions().get(1))),
+                            module.getPositions().get(1));
+                    yield PRESS + splitted.get(Integer.parseInt(module.getPositions().get(1)));
+                }
+                default -> throw new Exception();
+            };
+            case 4 -> {
                 dataCache.solveModule(userId);
-                switch (splitted.getFirst()) {
-                    case ONE:
-                        return MessageDto.builder().messageType(MessageType.TEXT).userId(userId).text(PRESS + module.getValues().get(0)).build();
-                    case TWO:
-                        return MessageDto.builder().messageType(MessageType.TEXT).userId(userId).text(PRESS + module.getValues().get(1)).build();
-                    case THREE:
-                        return MessageDto.builder().messageType(MessageType.TEXT).userId(userId).text(PRESS + module.getValues().get(3)).build();
-                    case FOUR:
-                        return MessageDto.builder().messageType(MessageType.TEXT).userId(userId).text(PRESS + module.getValues().get(2)).build();
-                }
-        }
-        return null;
+                yield switch (splitted.getFirst()) {
+                    case ONE -> PRESS + module.getValues().get(0);
+                    case TWO -> PRESS + module.getValues().get(1);
+                    case THREE -> PRESS + module.getValues().get(3);
+                    case FOUR -> PRESS + module.getValues().get(2);
+                    default -> throw new Exception();
+                };
+            }
+            default -> throw new Exception();
+        };
+        return MessageDto.builder().messageType(MessageType.TEXT).userId(userId).text(result).build();
     }
 
     private void setValueAndPosition(String userId, String value, String position) {
